--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,10 @@ environment:
   sdk: '>=2.19.4 <4.0.0'
 
 dependencies:
-  http: ^0.13.0
+  http: ^0.13.4
   flutter:
     sdk: flutter
+  jaguar_jwt: ^3.0.0 # Add this line for jaguar_jwt
 
   english_words: ^4.0.0
   provider: ^6.0.0
