--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,21 +9,21 @@ environment:
   sdk: '>=2.19.4 <4.0.0'
 
 dependencies:
-  http: ^0.13.4
   flutter:
     sdk: flutter
+  http: ^0.13.4
+  dio: ^4.0.0
+  cookie_jar: ^3.0.1
+  dio_cookie_manager: ^2.0.0
+  flutter_secure_storage: ^5.0.2 # Use flutter_secure_storage instead of path_provider for web compatibility
   jaguar_jwt: ^3.0.0 # Add this line for jaguar_jwt
-
   english_words: ^4.0.0
   provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
-
-
